Added support for allowable range values
fixes #1244